ajout de la dépendance à QcustomPlot qcustomplot
cette librairie permet d'afficher des courbes en temps réel

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,9 @@ add_executable(owloApp
     HeatmapWidget.cpp
     FrameProvider.cpp
     HeatmapWidget.h
+    qcustomplot.cpp
     FrameProvider.h
+    qcustomplot.h
 )
 
 target_link_libraries(owloApp PRIVATE Qt6::Widgets)
